--- a/reactapp/test/testrunner.html
+++ b/reactapp/test/testrunner.html
@@ -11,8 +11,10 @@
     <script>mocha.setup('bdd')</script>
 
     <!-- load code you want to test here -->
+    <script src="src/components/Navbar/MyNavbar.js"></script>
 
     <!-- load your test files here -->
+    <script src="test/myNavbarTest.js"></script>
 
     <script>
       mocha.run();
